# ray_tracing

./: .gitignore  README.md  pyproject.toml
scripts/: projectile.py  random_stuff.py
src/: canvas.py  ray_color.py  ray_vector.py  utils.py
src/utils/: color_utils.py  utils.py  vector_utils.py
tests/: test_canvas.py  test_points_vectors.py  test_ray_color.py  test_ray_vector.py
