[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ray_tracing"
version = "0.0.1"
authors = [
    { name = "Lauri Lehtola", email = "lauri.lehtola@relexsolutions.com" },
]

description = "Test-driven development of a ray tracing library"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8"
dependencies = [
    "numpy ~= 1.26.4"
]

[project.optional-dependencies]
dev = ["pytest ~= 8.2.2"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default